--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,16 @@ body {
 }
 
 header {
-    border-bottom: 1px solid  #cccccc;
+    border-bottom: 2px solid  #cccccc;
     margin: 0px;
 }
 
 h1 {
     font-family: "Georgia", "Times", "Times New Roman", "serif";
+    font-weight: bold;
+    font-size: 2em;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .divHeader {
@@ -24,13 +28,12 @@ h1 {
 .divPList {
     color: #777777;
     float: right;
+    padding-top: 30px;
 }
 
 ul {
     list-style-type: none;
     margin: 0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 li {
@@ -40,6 +43,8 @@ li {
 #liMiddle {
     border-left: 1px solid #cccccc;
     border-right: 1px solid #cccccc;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .divName {
@@ -61,12 +66,21 @@ li {
     border: 1px solid #dddddd;
 }
 
+.mContHead {
+    color: #4aaaa5;
+}
+
+.divInsideM {
+    padding: 20px;
+}
+
 footer {
     text-align: center;
     background: #666666;
     color: #777777;
-    border-top: 5px solid #4aaaa5;
+    border-top: 10px solid #4aaaa5;
     padding-top: 50px;
     padding-bottom: 5px;
     margin-top: 100px;
+    font-size: 0.75em;
 }
