--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,13 @@ body {
     margin: 0px;
     font-size: 18px;
     font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
+    background-image: url(../images/crossline-dots.png);
 }
 
 header {
     border-bottom: 2px solid  #cccccc;
     margin: 0px;
+    background: white;
 }
 
 h1 {
@@ -64,6 +66,7 @@ li {
     margin-top: 40px;
     clear: both;
     border: 1px solid #dddddd;
+    background: white;
 }
 
 .mContHead {
@@ -106,8 +109,10 @@ footer {
     border-top: 10px solid #4aaaa5;
     padding-top: 50px;
     padding-bottom: 5px;
-    margin-top: 100px;
     font-size: 0.75em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .clear {
