adjusted contact form font size and color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,6 @@ p {
 }
 
 #p1 {
-    float: left;
     width: 75%;
     margin-left: 20px;
 }
@@ -116,11 +115,16 @@ p {
     border: 0;
     color: #ffffff;
     padding: 5px 20px 5px 20px;
+    font-size: 18px;
 }
 
 .textInputs {
     margin-top: 5px;
     width: 100%;
+}
+
+form {
+    color: #777777;
 }
 
 #message {
